--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "dev": "node index.js",
+    "build": "echo 'No build needed for backend-only API'",
     "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
